# scientific-fhs

./: fhs.nix  flake.nix  julia.nix  module.nix  poetry.nix  pyproject.toml
