[tool.poetry]
name = "scientific-fhs"
version = "0.1.0"
description = ""
authors = ["Matt Camp <matt@aicampground.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
juliacall = "^0.9.15"
mlflow = "^2.10.2"
jupyter = "^1.0.0"
jupyterlab = "^4.1.2"
scipy = "^1.12.0"
pandas = "^2.2.0"
scikit-learn = "^1.4.1.post1"
tox = "^4.13.0"
pygments = "^2.17.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
